[metadata]
name = readersender
author = Juuso Korhonen
author_email = "juusokorhonen on github.com",
description = "A reader/sender framework for data messaging."
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
url = "https://github.com/juusokorhonen/readersender/",
project_urls =
	Source Code = https://github.com/juusokorhonen/readersender/

[options]
zip_safe = False
python_requires = >=3.0
include_package_data = True
packages = find:
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
MQTTSender = paho-mqtt

[console_scripts]
interval_readersender = readersender.tools.interval_readersender

[pycodestyle]
max-line-length = 99

[tool.pytest]
addopts = --pycodestyle

[flake8]
exclude = build/*, dist/*, *.egg-info
max-line-length = 99